...
    <string name="configure">Configure</string>
    <string name="task_name">Task name</string>
    <string name="new_task">New task</string>
    <string name="new_task_created">New task created</string>
    <string name="new_task_was_not_created">New task was not created</string>
    <string name="no_current_task">No current task</string>
    <string name="waiting">Waiting</string>
    <string name="in_progress">In Progress</string>
    <string name="completed">Completed</string>
    <string name="action_search">Search</string>
    <string name="action_sort">Sort</string>
    <string name="name">Name</string>
    <string name="priority">Priority</string>
    <string name="deadline">Deadline</string>
    <string name="preferences_name_key" translatable="false">application_preferences</string>
    <string name="unlimited">Unlimited</string>

    <string name="settings_priority_max_value_title">Maximum priority value</string>
    <string name="settings_priority_max_value_summary">Set the maximum possible value for the priority of tasks and projects</string>
    <string name="settings_priority_max_value_key" translatable="false">max_priority</string>
...
