...
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.socket.florian.todo.project.ProjectActivity"
    tools:showIn="@layout/activity_project">

    <ListView
        android:id="@+id/list"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:divider="@drawable/divider"
        android:choiceMode="multipleChoiceModal" />

</RelativeLayout>
