<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen
    xmlns:android="http://schemas.android.com/apk/res/android">
    <CheckBoxPreference
        android:defaultValue="true"
        android:key="pref_sync"
        android:summary="test summary"
        android:title="test title"/>

    <fr.socket.flo.todo.view.settings.SeekBarPreference
        android:defaultValue="5"
        android:key="@string/settings_priority_max_value_key"
        android:max="20"
        android:selectable="true"
        android:summary="@string/settings_priority_max_value_summary"
        android:title="@string/settings_priority_max_value_title"/>
</PreferenceScreen>